--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -14,6 +14,7 @@
 
     --secondary-color: #AC8EFA;
     --secondary-color-50: #E0D3FF;
+    --secondary-color-25:#F2EDFF;
 
     --gray-color: #B0B2BB;
     --bg-gradient: linear-gradient(to bottom, #D1C3F6, #9E7BFB);
@@ -507,6 +508,11 @@ textarea:focus {
     color: var(--bs-white);
     border-color: transparent;
 }
+.button-theme.button-theme_secondary-50 {
+    background-color: var(--secondary-color-50);
+    color: var(--secondary-color);
+    border-color: transparent;
+}
 
 .button-theme.button-theme_light {
     background-color: var(--bs-white);
@@ -730,10 +736,13 @@ textarea:focus {
     position: absolute;
     content: '';
     left: 0;
-    top:100%;
+    top:98%;
     width: 100%;
     height: 100vh;
     background-color: var(--bs-white);
+}
+.overflow-y{
+    overflow-y: auto;
 }
 .section-page {
     padding: 50px 0 70px 0;
@@ -746,7 +755,10 @@ textarea:focus {
 .section-heading {
     margin-bottom: 30px;
 }
-
+.section-heading .icon{
+    width: 24px;
+    height: 24px;
+}
 .heading-title {
     font-size: 2.6em;
     font-weight: 600;
