--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,18 @@
     max-width: 400px;
 }
 
+.section-form .section-form__wrap {
+    font-size: 18px;
+}
+
+.section-form .section-form__wrap .number {
+    color: #D9D9D9;
+}
+
+.section-form .section-form__wrap .number.active {
+    color: var(--primary-color);
+}
+
 .section-form .form-group-input {
     font-size: 1.3em;
     height: 40px;
@@ -1010,17 +1022,115 @@ button.card-pro__button[disabled] {
 }
 
 .page-checkin .image-decor-1 {
-    left: -90px;
+    left: -5vw;
 }
 
 .page-checkin .image-decor-2 {
-    right: -90px;
+    right: -5vw;
 }
 
 .page-checkin__image {
     width: 230px;
     height: 230px;
     transform: translateX(-15px);
+}
+
+.page-checkin__button {
+    padding: 6px !important;
+    color: #ABABAB !important;
+    font-weight: 500;
+}
+
+.page-checkin__button .image,
+.page-checkin__button .icon {
+    width: 45px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+}
+
+.page-checkin__button .icon svg {
+    width: 28px;
+    height: 28px;
+}
+
+.form-table__number .number-item {
+    border-radius: 30px;
+    background-color: #D9D9D9;
+    padding: 4px;
+    width: calc(100% / 3 - 0.5rem);
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.075em;
+    cursor: pointer;
+}
+
+.form-table__number .number-item svg {
+    width: 23px;
+    height: 23px;
+}
+
+.form-table__number .number-item.number-clear,
+.form-table__number .number-item:hover {
+    background-color: var(--secondary-color);
+    color: var(--bs-white);
+}
+
+.form-table__number .number-item.number-ok {
+    background-color: var(--bs-black);
+    color: var(--bs-white);
+}
+
+@media (max-width: 992px) {
+    .page-checkin .image-decor-1 {
+        left: -12vw;
+    }
+
+    .page-checkin .image-decor-2 {
+        right: -12vw;
+    }
+
+}
+
+@media (max-width: 600px) {
+    .page-checkin {
+        width: 85%;
+    }
+
+    .page-checkin__body {
+        padding: 20px;
+    }
+
+    .page-checkin__image {
+        width: 200px;
+        height: 200px;
+    }
+
+    .page-checkin .image-decor-1, .page-checkin .image-decor-2 {
+        width: 140px;
+        height: 140px;
+        top: 28%;
+    }
+
+    .page-checkin__button .image,
+    .page-checkin__button .icon {
+        width: 38px;
+        height: 38px;
+    }
+
+    .page-checkin__button .icon {
+        width: 30px;
+        height: 30px;
+    }
+
+    .page-checkin__button .icon svg {
+        width: 22px;
+        height: 22px;
+    }
 }
 
 @media (max-width: 576px) {
@@ -1096,14 +1206,6 @@ button.card-pro__button[disabled] {
         max-width: calc(100% - 30px);
         margin: 0 auto;
     }
-
-    .page-checkin {
-        width: 80%;
-    }
-
-    .page-checkin__body {
-        padding: 30px;
-    }
 }
 
 @media (max-width: 320px) {
@@ -1132,5 +1234,14 @@ button.card-pro__button[disabled] {
 
     .page-report {
         height: unset !important;
+    }
+
+    .page-checkin .image-decor-1, .page-checkin .image-decor-2 {
+        width: 120px;
+        height: 120px;
+    }
+
+    .page-checkin__button {
+        font-size: 1em !important;
     }
 }
