--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1098,24 +1098,143 @@ button.card-pro__button[disabled] {
     line-clamp: 2;
     -webkit-box-orient: vertical;
 }
-.page-home .section-heading .icon{
+
+.page-home .section-heading .icon {
     width: 38px;
     height: 38px;
 }
-.page-home .section-heading .title{
+
+.page-home .section-heading .title {
     transform: translateY(4px);
 }
-.page-home__notification{
+
+.page-home__notification {
     width: 35px;
     height: 35px;
 }
-.page-home__notification > span{
+
+.page-home__notification > span {
     background-color: #FB4E4E;
     width: 12px;
     height: 12px;
     right: 1px;
     top: 3px;
 }
+
+.card-box {
+    border-radius: 20px;
+    padding: 15px;
+    background-color: #D9EEF3;
+    color: #9CD5E3;
+}
+
+.card-box__title {
+    font-size: 1.35em;
+}
+
+.card-box__icon {
+    width: 40px;
+    height: 40px;
+}
+
+.card-box__number {
+    font-size: 1.8em;
+}
+
+.card-box__link {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+.card-box__link svg {
+    width: 12px;
+    height: 12px;
+}
+
+.card-box.box-1 .card-box__image .item {
+    width: 50px;
+    height: 50px;
+}
+
+.card-box.box-1 .card-box__image .item:not(:first-child) {
+    margin-left: -15px;
+}
+
+.card-box.box-1 .card-box__image .item img {
+    padding: 3px;
+}
+
+.card-box.box-1 .card-box__decor {
+    left: -30px;
+    top: -222px;
+    width: 329px;
+    height: 325px;
+    transform: rotate(-5deg);
+}
+
+.card-box.box-2 {
+    color: #DFBC43;
+    background-color: #FFE075;
+}
+
+.card-box.box-2 .card-box__decor {
+    left: -24px;
+    bottom: -45px;
+    width: 180px;
+    height: 125px;
+}
+
+.card-box.box-3 {
+    color: #EF7B44;
+    background-color: #FFA87E;
+}
+
+.card-box.box-3 .card-box__decor {
+    right: 0;
+    top: -45px;
+    width: 135px;
+    height: 110px;
+}
+
+.card-box.box-4 {
+    background-color: #B9DDB7;
+}
+
+.card-box.box-4 .card-box__link {
+    background-color: #A1CD9F;
+}
+
+.card-box.box-4 .card-box__decor {
+    left: -53px;
+    top: -54px;
+    width: 210px;
+    height: 135px;
+}
+
+.card-box.box-5 {
+    color: #E899A6;
+    background-color: #F7C0C9;
+}
+
+.card-box.box-5 .card-box__decor {
+    left: -79px;
+    top: -198px;
+    width: 435px;
+    height: 402px;
+}
+
+.card-box.box-6 {
+    background-color: #BFC5FF;
+}
+
+.card-box.box-6 .card-box__link {
+    background-color: #9EA5F1;
+}
+
 @media (max-width: 992px) {
     .page-checkin .image-decor-1 {
         left: -12vw;
