--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1121,6 +1121,16 @@ button.card-pro__button[disabled] {
     top: 3px;
 }
 
+.page-home__body {
+    border-radius: 25px;
+    box-shadow: 0px 0px 32px 0px #00000003;
+    padding-bottom: 50px;
+}
+
+.page-home__body .body-wrap {
+    height: calc(100% - 70px);
+}
+
 .card-box {
     border-radius: 20px;
     padding: 15px;
@@ -1129,7 +1139,7 @@ button.card-pro__button[disabled] {
 }
 
 .card-box__title {
-    font-size: 1.35em;
+    font-size: 1.3em;
 }
 
 .card-box__icon {
@@ -1233,6 +1243,32 @@ button.card-pro__button[disabled] {
 
 .card-box.box-6 .card-box__link {
     background-color: #9EA5F1;
+}
+
+.page-home {
+    padding: 50px 0;
+}
+
+.page-home__footer {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    bottom: 0;
+    border-radius: 25px;
+    height: 75px;
+    padding: 15px 30px;
+    z-index: 3;
+    background: linear-gradient(90deg, #49289E 0%, #704FC2 100%);
+}
+
+.page-home__footer .image {
+    width: 100px;
+    height: 100px;
+    transform: translateY(-25px);
+}
+
+.page-home__footer .title {
+    font-size: 1.35em;
 }
 
 @media (max-width: 992px) {
