--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -385,7 +385,7 @@ textarea:focus {
 }
 
 .overflow-y {
-    overflow-x: hidden; !important;
+    overflow-x: hidden !important;
     overflow-y: auto !important;
 }
 
