--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1099,24 +1099,20 @@ button.card-pro__button[disabled] {
     -webkit-box-orient: vertical;
 }
 
-.page-home .section-heading .icon {
-    width: 38px;
-    height: 38px;
+.page-home .section-heading .icon,
+.page-home__notification{
+    width: 30px;
+    height: 30px;
 }
 
 .page-home .section-heading .title {
     transform: translateY(4px);
 }
 
-.page-home__notification {
-    width: 30px;
-    height: 30px;
-}
-
 .page-home__notification > span {
     background-color: #FB4E4E;
-    width: 12px;
-    height: 12px;
+    width: 10px;
+    height: 10px;
     right: 1px;
     top: 3px;
 }
