--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1099,10 +1099,11 @@ button.card-pro__button[disabled] {
     -webkit-box-orient: vertical;
 }
 
-.page-home .section-heading .icon,
+
 .page-home__notification{
     width: 30px;
     height: 30px;
+    margin-top: 8px;
 }
 
 .page-home .section-heading .title {
@@ -1111,10 +1112,10 @@ button.card-pro__button[disabled] {
 
 .page-home__notification > span {
     background-color: #FB4E4E;
-    width: 10px;
-    height: 10px;
-    right: 1px;
-    top: 3px;
+    width: 9px;
+    height: 9px;
+    right: 2px;
+    top: 4px;
 }
 
 .page-home__body {
